[package]
name = "dismay"
version = "0.1.0"
edition = "2021"

[lib]
name = "dismay"
path = "src/lib.rs"
crate-type = ["proc-macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full"] }
